# QTcp

./: README.md
telegram/: CMakeLists.txt  net.cpp  net.h  qml.qrc
telegram/android/: AndroidManifest.xml
telegram/header/: backend.h  chat.h  command.h  file.h  mutichat.h  peer.h  peers.h  runnable.h
telegram/qml/: Chat_View.qml  Chats_.qml  Config_.qml  Console.qml  FileDialog_.qml  File_process.qml  Icon_.qml  Ipv4_255.qml  Ipv4_input.qml  LineEdit.qml  Log.qml  Main.qml  MouseArea_.qml  Peer_.qml  Popup_.qml  Rectangle_color.qml  Refresh.qml  SideBar.qml  Text_.qml  ToolBar.qml  ToolBar_.qml  ToolBar_model.qml
telegram/source/: backend.cpp  chat.cpp  command.cpp  file.cpp  main.cpp  mutichat.cpp  peer.cpp  peers.cpp  runnable.cpp
